<resources>
    <string name="app_name">Chuck Norris Forever</string>
    <string name="random_joke">Random joke</string>
    <string name="custom_name">Custom name joke</string>
    <string name="jokes">Jokes</string>
    <string name="title_text">Chuck Norris Jokes</string>
    <string name="joke_text">Text for the joke screen</string>
    <string name="jokes_text">Will be a list of jokes</string>
    <string name="done">Done</string>
    <string name="add_name">John Smith</string>
    <string name="name_description">Enter a first and last name to be used in the joke</string>
    <string name="no_data">Unable to retrieve data</string>
    <string name="invalid_name">Please check that you have entered a first and last name</string>
    <string name="loading">Loading</string>
    <string name="nav_view_header_title">Chuckie</string>
    <string name="joke_fragment_menu_title">Custom name joke</string>
    <string name="jokes_fragment_menu_title">Jokes</string>
</resources>
